--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.http.limits.max-body-size=700M
 quarkus.tls.trust-all=true
 quarkus.package.type=uber-jar
-%dev.quarkus.rest-client.streaming-server.url=http://localhost:8082/api
+%dev.quarkus.rest-client.streaming-server.url=http://localhost:8082/streaming/api
 # %prod.quarkus.rest-client.streaming-server.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
@@ -16,5 +16,5 @@ quarkus.http.access-log.enabled=false
 %dev.quarkus.hibernate-orm.database.generation=drop-and-create
 %prod.quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.format-sql=true
-quarkus.http.cors=true
+quarkus.http.cors=false
 quarkus.http.host=0.0.0.0
