--- a/franklyn-client/src/main/resources/application.properties
+++ b/franklyn-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Your configuration properties
 %dev.quarkus.rest-client.exam-api.url=http://localhost:8080
 %prod.quarkus.rest-client.exam-api.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
-%dev.quarkus.rest-client.streaming-server.url=http://localhost:8082/api
+%dev.quarkus.rest-client.streaming-server.url=http://localhost:8082/streaming/api
 # %prod.quarkus.rest-client.streaming-server.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
 quarkus.rest-client.exam-api.scope=javax.inject.Singleton
 quarkus.tls.trust-all=true
@@ -10,5 +10,5 @@ quarkus.quartz.start-mode=forced
 quarkus.http.cors=true
 quarkus.package.type=uber-jar
 quarkus.package.add-runner-suffix=false
-quarkus.http.port = 8081
+quarkus.http.port=8081
 quarkus.http.host=0.0.0.0
