--- a/streaming-server/src/main/resources/application.properties
+++ b/streaming-server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 exam-directory=exams
-quarkus.http.root-path=/api
+quarkus.http.root-path=/streaming/api
 quarkus.http.port = 8082
+quarkus.http.cors=false
