update frontend. setup nextjs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.http.limits.max-body-size=700M
 quarkus.tls.trust-all=true
 quarkus.package.type=uber-jar
 %dev.quarkus.rest-client.streaming-server.url=http://localhost:8082/streaming/api
-# %prod.quarkus.rest-client.streaming-server.url=https://student.cloud.htl-leonding.ac.at/it190204/franklyn/
+%prod.quarkus.rest-client.streaming-server.url=http://franklyn-streaming-server:8082/streaming/api
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=app
 quarkus.datasource.password=app
